--- a/produtos-cadastro.html
+++ b/produtos-cadastro.html
@@ -7,71 +7,73 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <title>Cadastro de Clientes</title>
   </head>
-  <body>
+  <body class="bg-light">
     <header>
-      <nav class="site-header sticky-top py-1 shadow-sm p-3 mb-5 bg-white rounded">
+      <nav class="site-header sticky-top py-1 shadow-sm p-3 mb-5 bg-white rounded border-bottom border-primary">
         <div class="container d-flex flex-column flex-md-row justify-content-between">
           <a class="py-2" href="#">
             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="d-block mx-auto"><circle cx="12" cy="12" r="10"></circle><line x1="14.31" y1="8" x2="20.05" y2="17.94"></line><line x1="9.69" y1="8" x2="21.17" y2="8"></line><line x1="7.38" y1="12" x2="13.12" y2="2.06"></line><line x1="9.69" y1="16" x2="3.95" y2="6.06"></line><line x1="14.31" y1="16" x2="2.83" y2="16"></line><line x1="16.62" y1="12" x2="10.88" y2="21.94"></line></svg>
           </a>
-          <a class="py-2 d-none d-md-inline-block" href="#">Cadastro de Clientes</a>
-          <a class="py-2 d-none d-md-inline-block" href="#">Listagem De Clientes</a>
-          <a class="py-2 d-none d-md-inline-block" href="#">Cadastro De Produtos</a>
-          <a class="py-2 d-none d-md-inline-block" href="#">Listagem De Produtos</a>
-          <a class="py-2 d-none d-md-inline-block" href="#">Vender</a>
-          <a class="py-2 d-none d-md-inline-block" href="#">Status de Pagamento</a>
+          <a class="py-2 d-none d-md-inline-block" href="#">Nova Venda</a>
+          <a class="py-2 d-none d-md-inline-block" href="#">Novo Cliente</a>
+          <a class="py-2 d-none d-md-inline-block" href="#">Novo Produto</a>
+          <a class="py-2 d-none d-md-inline-block" href="#">Listagem de Produtos</a>
+          <a class="py-2 d-none d-md-inline-block" href="#">Listagem de Clientes</a>
+          <a class="py-2 d-none d-md-inline-block" href="#">Status de pagamento/Meu Saldo</a>
         </div>
       </nav>
     </header>
     <main>
-        <div class="container p-5">
-          <form>
-            <div class="row">
-              <div class="col">
-                <div class="form-group">
-                  <label><strong></strong></label>
-                  <input type="text" class="form-control">
-                </div>
-                <div>
-                  <div class="form-group">
-                    <label><strong></strong></label>
-                    <input type="text" class="form-control">
-                  </div>
-                <div>
-                  <div class="form-group">
-                    <label><strong></strong></label>
-                    <input type="text" class="form-control">
-                  </div>
-                </div>
-                </div>
-              </div>
-              <div class="col">
-                <div class="form-group">
-                  <label for=""><strong></strong></label>
-                  <input type="" class="form-control">
-                </div>
-                <div class="form-group">
-                  <label><strong></strong></label>
-                  <input type="" class="form-control">
-                </div>
-                <div class="form-group">
-                  <label><strong></strong></label>
-                  <input type="" class="form-control">
-                </div>
-                <div class="container">
-                  <div class="row">
-                    <div class="">
-                      <div class="bg-info clearfix">
-                        <button type="button" class="btn btn-primary float-right"></button>
-                      </div>
-                    </div>
-                  </div>
-                </div> 
-              </div>
-            </div>
-          </form>
-        </div>
-      </main>
+      <div class="container p-2 mw-100 ">
+        <table class="table table-responsive-xl">
+          <thead>
+            <tr>
+              <th scope="col"></th>
+              <th scope="col">Nome</th>
+              <th scope="col">Telefone</th>
+              <th scope="col">Celular</th>
+              <th scope="col">E-mail</th>
+              <th scope="col">Facebook</th>
+              <th scope="col">Instagram</th>
+              <th scope="col">Pago</th>
+              <th scope="col">outro</th>
+              <th scope="col">outro</th>
+              <th scope="col">Data de Pagamento</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <th scope="row"></th>
+              <td>Alguem</td>
+              <td>(21) 26188-098</td>
+              <td>(21) 98955-3195</td>
+              <td>seilagab@protonmail.com</td>
+              <td>https://www.facebook.com/seila</td>
+              <td>https://www.instagram.com/seila</td>
+            </tr>
+            <tr>
+              <th scope="row"></th>
+              <td>Alguem</td>
+              <td>(21) 26188-098</td>
+              <td>(21) 98955-3195</td>
+              <td>seilagab@protonmail.com</td>
+              <td>https://www.facebook.com/seila</td>
+              <td>https://www.instagram.com/seila</td>
+            </tr>
+            <tr>
+              <th scope="row"></th>
+              <td>Alguem</td>
+              <td>(21) 26188-098</td>
+              <td>(21) 98955-3195</td>
+              <td>seilagab@protonmail.com</td>
+              <td>https://www.facebook.com/seila</td>
+              <td>https://www.instagram.com/seila</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+     
+    </main>  
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
