--- a/cliente-cadastro.html
+++ b/cliente-cadastro.html
@@ -1,79 +1,131 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="pt-br">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link  rel ="stylesheet"  href ="https://unpkg.com/@coreui/icons/css/all.min.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <title>Cadastro de Clientes</title>
-  </head>
-  <body class="bg-light">
-    <header>
-      <nav class="site-header sticky-top py-1 shadow-sm p-3 mb-5 bg-white rounded border-bottom border-primary">
-        <div class="container d-flex flex-column flex-md-row justify-content-between">
-          <a class="py-2" href="#">
-            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="d-block mx-auto"><circle cx="12" cy="12" r="10"></circle><line x1="14.31" y1="8" x2="20.05" y2="17.94"></line><line x1="9.69" y1="8" x2="21.17" y2="8"></line><line x1="7.38" y1="12" x2="13.12" y2="2.06"></line><line x1="9.69" y1="16" x2="3.95" y2="6.06"></line><line x1="14.31" y1="16" x2="2.83" y2="16"></line><line x1="16.62" y1="12" x2="10.88" y2="21.94"></line></svg>
-          </a>
-          <a class="py-2 d-none d-md-inline-block" href="#">Nova Venda</a>
-          <a class="py-2 d-none d-md-inline-block" href="#">Novo Cliente</a>
-          <a class="py-2 d-none d-md-inline-block" href="#">Novo Produto</a>
-          <a class="py-2 d-none d-md-inline-block" href="#">Listagem de Produtos</a>
-          <a class="py-2 d-none d-md-inline-block" href="#">Listagem de Clientes</a>
-          <a class="py-2 d-none d-md-inline-block" href="#">Status de pagamento/Meu Saldo</a>
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="https://unpkg.com/@coreui/icons/css/all.min.css">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+    integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+  <link rel="stylesheet" href="assets/css/custom.css">
+  <title>Document</title>
+</head>
+
+<body>
+  <header
+    class="navbar fixed-top bg-light flex-md-nowrap p-2 shadow d-flex p-0 mb-0 mt-0 bd-highlight bg-light justify-content-center">
+    <div class="p-0 bd-highlight">
+      <i class="fas fa-piggy-bank fa-2x"></i>
+    </div>
+  </header>
+  <nav class="container-fluid">
+    <div class="row">
+      <nav class="col-md-2 n-none d-md-block sidebar mt-3 bg-light">
+        <div class="sidebar-sticky ">
+          <ul class="nav flex-column mt-4">
+            <li class="nav-item mb-2 pl-4">
+              <a class="nav-link active" href="#">Dashboard</a>
+            </li>
+            <li class="nav-item mb-2 pl-4">
+              <a class="nav-link active" href="#">Novo Cliente</a>
+            </li>
+            <li class="nav-item mb-2 pl-4">
+              <a class="nav-link active" href="#">Novo Produto</a>
+            </li>
+            <li class="nav-item mb-2 pl-4">
+              <a class="nav-link active" href="#">Produtos</a>
+            </li>
+            <li class="nav-item mb-2 pl-4">
+              <a class="nav-link active" href="#">Clientes</a>
+            </li>
+            <li class="nav-item mb-2 pl-4">
+              <a class="nav-link active" href="#">Nova Venda</a>
+            </li>
+          </ul>
         </div>
       </nav>
-    </header>
-    <main>
-      <div class="container">
-        <form>
-          <div class="row shadow-sm p-3 mb-5 bg-white rounded border border-primary">
-            <div class="col ">
-              <div class="form-group">
-                <label><strong>Nome :</strong></label>
-                <input type="text" class="form-control border border-primary">
+      <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4 bg-white">
+        <div class="chartjs-size-monitor"
+          style="position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; pointer-events: none; visibility: hidden; z-index: -1;">
+          <div class="chartjs-size-monitor-expand"
+            style="position:absolute;left:0;top:0;right:0;bottom:0;overflow:hidden;pointer-events:none;visibility:hidden;z-index:-1;">
+            <div style="position:absolute;width:1000000px;height:1000000px;left:0;top:0"></div>
+          </div>
+          <div class="chartjs-size-monitor-shrink"
+            style="position:absolute;left:0;top:0;right:0;bottom:0;overflow:hidden;pointer-events:none;visibility:hidden;z-index:-1;">
+            <div style="position:absolute;width:200%;height:200%;left:0; top:0"></div>
+          </div>
+        </div>
+        <div
+          class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 pl-2 pr-2 mb-3 border-bottom mt-5">
+          <h1 class="h2">Novo Cliente</h1>
+        </div>
+        <form class="needs-validation pl-4 pr-4 pt-3" novalidate>
+          <div class="form-row">
+            <div class="col-md-4 mb-3">
+              <label for="validationCustom01">Primeiro nome</label>
+              <input type="text" class="form-control" id="validationCustom01" placeholder="Nome" required>
+              <div class="valid-feedback">
+                Tudo certo!
               </div>
-              <div>
-                <div class="form-group">
-                  <label><strong>Tel :</strong></label>
-                  <input type="text" class="form-control border border-primary">
-                </div>
-              <div>
-                <div class="form-group">
-                  <label><strong>Cel :</strong></label>
-                  <input type="text" class="form-control border border-primary">
+            </div>
+            <div class="col-md-4 mb-3">
+              <label for="validationCustom02">Sobrenome</label>
+              <input type="text" class="form-control" id="validationCustom02" placeholder="Sobrenome" required>
+              <div class="valid-feedback">
+                Tudo certo!
+              </div>
+            </div>
+            <div class="col-md-4 mb-3">
+              <label for="validationCustomUsername">Número</label>
+              <div class="input-group">
+                <input type="text" class="form-control" id="validationCustomUsername" placeholder="Número"
+                  aria-describedby="inputGroupPrepend" required>
+                <div class="invalid-feedback">
+                  Por favor, digite o número do cliente.
                 </div>
               </div>
             </div>
           </div>
-            <div class="col ">
-              <div class="form-group">
-                <label for="" ><strong>E-mail :</strong></label>
-                <input type="" class="form-control border border-primary">
-                
+          <div class="form-row">
+            <div class="col-md-6 mb-3">
+              <label for="validationCustom03">Cidade</label>
+              <input type="text" class="form-control" id="validationCustom03" placeholder="Cidade" required>
+              <div class="invalid-feedback">
+                Por favor, informe uma cidade válida.
               </div>
-              <div class="form-group">
-                <label><strong>Facebook :</strong></label>
-                <input type="" class="form-control border border-primary">
+            </div>
+            <div class="col-md-3 mb-3">
+              <label for="validationCustom04">Estado</label>
+              <input type="text" class="form-control" id="validationCustom04" placeholder="Estado" required>
+              <div class="invalid-feedback">
+                Por favor, informe um estado válido.
               </div>
-              <div class="form-group">
-                <label><strong>Instagram :</strong></label>
-                <input type="" class="form-control border border-primary">
+            </div>
+            <div class="col-md-3 mb-3">
+              <label for="validationCustom05">CEP</label>
+              <input type="text" class="form-control" id="validationCustom05" placeholder="CEP" required>
+              <div class="invalid-feedback">
+                Por favor, informe um CEP válido.
               </div>
-              <div class="container">
-                <div class="row">
-                  <div class="col-12">
-                    <div class="">
-                      <button type="button" class="btn btn-primary float-right">Novo Cliente</button>
-                    </div>
-                  </div>
-                </div>
-              </div> 
             </div>
           </div>
+
+          <button class="btn btn-primary" type="submit">Cadastrar!</button>
         </form>
-      </div>
-    </main>  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-  </body>
+      </main>
+    </div>
+    <script src="https://kit.fontawesome.com/89379e833d.js" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+      integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+      crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+      integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+      crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+      integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+      crossorigin="anonymous"></script>
+</body>
+
 </html>
